# freshers-careers-website

./: .replit  LICENSE  README.md  app.py  pyproject.toml
myenv/: pyvenv.cfg
templates/: footer.html  home.html  jobitem.html  nav.html
